# docs/swagger.yaml
@@ -98,6 +98,15 @@ definitions:
         example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJNYXBDbGFpbXMiOnsiRXhwaXJlc0F0IjoxNzM0MzAwNjM0LCJJc3N1ZWRBciI6MTczMTY5NDIzNH0sInVzZXJfaWQiOjJ9.o9i-1GBcLtUR0SpDNiBuHfzQWHBt465bhxcC_X2WqBY
         type: string
     type: object
+  entities.TaroCard:
+    properties:
+      direct_meaning:
+        type: string
+      id:
+        type: integer
+      reverse_meaning:
+        type: string
+    type: object
   entities.User:
     properties:
       birth_date:
@@ -250,6 +259,34 @@ paths:
       summary: Sign up user
       tags:
       - user
+  /tarot/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Tarot card ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Details of the tarot card
+          schema:
+            $ref: '#/definitions/entities.TaroCard'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entities.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/entities.ErrorResponse'
+      summary: Get a tarot card by ID
+      tags:
+      - tarot
   /users:
     get:
       consumes:
