# internal/entities/taro_card.go
@@ -1,0 +1,7 @@
+package entities
+
+type TaroCard struct {
+	ID             int    `json:"id"`
+	DirectMeaning  string `json:"direct_meaning"`
+	ReverseMeaning string `json:"reverse_meaning"`
+}
